--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "15.4.5",
     "openai": "^5.13.1",
     "prism-react-renderer": "^2.4.1",
+    "razorpay": "^2.9.6",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
