--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.0",
-    "next": "15.4.5",
+    "next": "^15.4.8",
     "openai": "^5.13.1",
     "prism-react-renderer": "^2.4.1",
     "razorpay": "^2.9.6",
