--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.12",
     "@clerk/nextjs": "^6.28.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
@@ -42,6 +43,7 @@
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.0",
     "next": "^15.4.8",
+    "next-themes": "^0.4.6",
     "openai": "^5.13.1",
     "prism-react-renderer": "^2.4.1",
     "razorpay": "^2.9.6",
